Serialize original node when dragging a link instead of synthesizing HTML.

This preserves the original attributes, like what already happens for
image and selection drags today.

BUG=590912

Review URL: https://codereview.chromium.org/1860293003

Cr-Commit-Position: refs/heads/master@{#385378}

Former-commit-id: 3accf1e624bb65f3c4b594e646b54b28dab05c21